/*
 * // Copyright (C) <2020> <becon GmbH>
 * //
 * // This program is free software: you can redistribute it and/or modify
 * // it under the terms of the GNU General Public License as published by
 * // the Free Software Foundation, version 3 of the License.
 * //
 * // This program is distributed in the hope that it will be useful,
 * // but WITHOUT ANY WARRANTY; without even the implied warranty of
 * // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * // GNU General Public License for more details.
 * //
 * // You should have received a copy of the GNU General Public License
 * // along with this program. If not, see <http://www.gnu.org/licenses/>.
 */

plugins {
	id 'org.springframework.boot' version '3.0.0'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'java'
	id 'com.google.protobuf' version '0.9.4'
}

group = 'com.becon'
version = '4.8.3'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

ext {
	grpcVersion = '1.66.0'
	protobufVersion = '3.25.1'
}

tasks.named('bootJar') {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

test {
	useJUnitPlatform()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-quartz'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-ldap'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.session:spring-session-core'
	implementation 'org.springframework.security:spring-security-ldap'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
	implementation 'org.liquibase:liquibase-core'
	implementation 'org.openjdk.nashorn:nashorn-core:15.4'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.30.2'
	implementation 'org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
	implementation 'wsdl4j:wsdl4j:1.6.3'
	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'com.github.java-json-tools:json-patch:1.13'
	implementation 'javax.json:javax.json-api:1.1.4'
	implementation 'org.jsoup:jsoup:1.13.1'
	implementation 'com.google.zxing:core:3.4.1'
	implementation 'com.warrenstrange:googleauth:1.4.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.1'
	implementation "io.grpc:grpc-protobuf:1.66.0"
	implementation "io.grpc:grpc-stub:1.66.0"
	implementation "io.grpc:grpc-netty-shaded:1.66.0"
	implementation "com.google.protobuf:protobuf-java-util:3.25.1"
	compileOnly 'org.apache.tomcat:annotations-api:6.0.53'
	compileOnly 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	runtimeOnly 'mysql:mysql-connector-java'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mockito:mockito-inline:5.2.0'
}

def generatedFilesBaseDir = "${buildDir}/generated/source/proto"
protobuf {
	protoc {
		artifact = "com.google.protobuf:protoc:${protobufVersion}"
	}
	clean {
		delete generatedFilesBaseDir
	}
	plugins {
		grpc {
			artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
		}
	}
	generateProtoTasks {
		all()*.plugins {
			grpc {}
		}
	}
}

sourceSets {
	main {
		java {
			srcDir "${generatedFilesBaseDir}/main/java"
			srcDir "${generatedFilesBaseDir}/main/grpc"
		}
	}
}
